@@ -179,11 +179,11 @@ childRelations = {
 #
 #-------------------------------------------------------------------------
 confidence = [
-    _("Very Low"),
-    _("Low"),
-    _("Normal"),
+    _("Very High"), 
     _("High"),
-    _("Very High")
+    _("Normal"),
+    _("Low"),
+    _("Very Low")
     ]
 
 #-------------------------------------------------------------------------
