@@ -117,7 +117,7 @@ class FtmDescendantReport(Report.Report):
         generations.sort()
 
         for generation in generations:
-            if self.pgbrk and generation > 0:
+            if self.pgbrk and generation > 1:
                 self.doc.page_break()
             self.doc.start_paragraph("Generation")
             t = _("Generation No. %d") % generation
@@ -232,7 +232,7 @@ class FtmDescendantReport(Report.Report):
             return
 
         self.doc.start_paragraph('Generation')
-        self.doc.write_text('Endnotes')
+        self.doc.write_text(_('Endnotes'))
         self.doc.end_paragraph()
         
         keys.sort()
@@ -270,10 +270,11 @@ class FtmDescendantReport(Report.Report):
         slist = obj.getSourceRefList()
         if slist:
             msg.write('<super>')
-            first = 0
+            first = 1
             for ref in slist:
-                if first == 1:
+                if not first:
                     msg.write(',')
+                first = 0
                 msg.write("%d" % self.sref_index)
                 self.sref_map[self.sref_index] = ref
                 self.sref_index += 1
